# synthetic_bathymetry_inversion

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  environment.yml  pinned_environment.yml  pyproject.toml
notebooks/: ensemble_figures.ipynb  poster_figures.ipynb
paper/: ice_shelf_stats.csv
paper/figures/non_coded/: hyperparameter_optimizations.excalidraw  hyperparameter_optimizations_portrait.excalidraw  inversion_workflow.excalidraw  uncertainty_workflow.excalidraw
poster/figures/: uncertainty_workflow.excalidraw
src/projectname/: __init__.py  module1.py
src/synthetic_bathymetry_inversion/: __init__.py  ice_shelf_stats.py  plotting.py  synthetic.py
tests/: test_ice_shelf_stats.py  test_module1.py  test_plotting.py  test_synthetic.py
